# powerweek1_exercices

./: README.md
ex01/: CMakeLists.txt
